# rdkservices

./: 0104-remove-rfcapi.patch  CMakeLists.txt
DisplayInfo/DeviceSettings/: PlatformImplementation.cpp
DisplaySettings/: CMakeLists.txt  DisplaySettings.cpp  DisplaySettings.h  DisplaySettings.json  DisplaySettingsLgiAddons.config  DisplaySettingsLgiAddons.cpp  DisplaySettingsLgiAddons.h  ServiceRegistration.cpp
helpers/: utils.cpp  utils.h
